@@ -1,4 +1,9 @@
-05/30/2003  version 0.2 pre5    Ian Lewis <IanLewis@member.fsf.org>
+06/08/2004  version 0.2 pre6    Ian Lewis <IanLewis@member.fsf.org>
+
+    * Fixed a bug that caused a null pointer exception when reloading an
+      untitled document.
+
+05/30/2004  version 0.2 pre5    Ian Lewis <IanLewis@member.fsf.org>
 
     * Removed references to the DocumentBuffer class in the DocumentView 
       classes.
